--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                                 <hr color="black">
                                 My name is Chaitra Dasar.
                                 I love to interact with people and entertaining people with my skills.
-                                Apart from studies, I am good at dance.I am a state level filmy and filk dancer.
+                                Apart from studies, I am good at dance.I am a state level filmy and folk dancer.
                                 I was awarded at State level Prathibha Karanji held by Government of Karnataka
                                 and I awarded Sathish sugars awards for filmy and folk dance.
                                 <hr color="black">
@@ -218,7 +218,7 @@
                                 <ul>
                                     <br>
                                     <li>
-                                        Shree Laxmi Poorva Pratamika Kanmante School Musuguppi.  2010-2015
+                                        Shree Laxmi Poorva Pratamika Kanmant School Musuguppi.  2010-2015
                                         
                                     </li>
                                     <br>
